# khmer

./: '  .gitattributes  .gitignore  flake.nix  pdf_to_png.sh  Краткий русско-кхмерский словарь--content.tab  Краткий русско-кхмерский словарь--content.txt  Краткий русско-кхмерский словарь--mery.txt  Краткий русско-кхмерский словарь--other.txt  Кхмерско-русский словарь-Горгониев--content.txt  Кхмерско-русский словарь-Горгониев--geo.txt
.khmer_dictionary/: pubspec.yaml
.nix/: android.nix
anki-processor/: .gitignore  .prettierrc  anki.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
bestdict_cracker/: Cargo.toml
bestdict_cracker/src/: main.rs
decrypt_tool/: Cargo.toml
dicts/: package-lock.json  package.json  tsconfig.json
gemini-ocr-automate-images-upload-chrome-extension/: .gitignore  build.js  check_fks.ts  cleanup_redundant_displays.ts  decode.ts  decrypt_db.ts  fix_by_hand.ts  fix_windows_encoding.ts  merge.ts  migrate_chuon_nath.ts  migrate_km_ru.ts  migrate_ru_km.ts  migrate_wiktionary.ts  migrate_wiktionary_tsv.ts  move_phonetics_to_desc.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  validate_html.ts  validate_html_word_display.ts
js-utils/: concat-into-one.js  new.ts  package.json  page.ts  print-empty-pages.js  print-empty-pages.ts  tsconfig.json
khmer-spellchecker/: CHANGELOG.md  README.md  dictionary-my.txt  dictionary.txt  dictionary1.txt  (+13 more)
srghmakhmerdict/src-tauri/: Cargo.toml  dict.db  tauri.conf.json
srghmakhmerdict/src-tauri/capabilities/: default.json
srghmakhmerdict/src-tauri/icons/: icon.icns
srghmakhmerdict/src-tauri/src/: app_state.rs  constants.rs  db_initialize.rs  image_manager.rs  lib.rs  main.rs  protocols.rs  utils.rs
srghmakhmerdict/src-tauri/src/db/: anki.rs  dict.rs  mod.rs
srghmakhmerdict/src-tauri/src/db/dict/: common.rs  en.rs  km.rs  mod.rs  ru.rs
(+586 files in other folders)
