[package]
name = "srghmakhmerdict"
version = "0.1.0"
description = "Khmer-English-Russian dictionary"
authors = ["srghma"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "srghmakhmerdict_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
# tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
# tauri-plugin-store = "2"
# tauri-plugin-clipboard-manager = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
flate2 = "1"
tauri-plugin-tts = "0.1"
tauri-plugin-log = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
futures-util = "0.3"
urlencoding = "2.1.3"
tauri-plugin-opener = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2"
